fix: complete architecture review and cleanup
- Expanded sync allowlist from 20 to 36 files (added 16 missing utils/docs)
- Fixed 6 stale docs referencing old \"edit runtime/\" workflow
- Fixed 5 planning files with stale references
- Removed invalid frontmatter fields from 16 agent files (tools, model, etc.)
- Moved workers-new-castes.md to .aether/ and added to allowlist
- Moved AETHER-2.0-IMPLEMENTATION-PLAN.md to .aether/docs/

All documentation now correctly reflects:
  .aether/ = source of truth (edit here)
  runtime/ = staging (auto-populated by bin/sync-to-runtime.sh)

--- a/.planning/phases/08-build-polish-output-timing-integration/08-03-PLAN.md
+++ b/.planning/phases/08-build-polish-output-timing-integration/08-03-PLAN.md
@@ -425,7 +425,7 @@ bash runtime/aether-utils.sh generate-commit-message contextual 8 "test" "this i
 ## Rollout Plan
 
 ### Phase 1: Function Enhancement
-1. Update `runtime/aether-utils.sh` with new "contextual" type
+1. Update `.aether/aether-utils.sh` (source of truth) with new "contextual" type
 2. Test locally with various inputs
 3. Verify backward compatibility (old types still work)
 
@@ -457,7 +457,7 @@ bash runtime/aether-utils.sh generate-commit-message contextual 8 "test" "this i
 
 | File | Change Type | Description |
 |------|-------------|-------------|
-| `runtime/aether-utils.sh` | Modify | Add "contextual" case to generate-commit-message function |
+| `.aether/aether-utils.sh` | Modify | Add "contextual" case to generate-commit-message function (source of truth) |
 | `.claude/commands/ant/continue.md` | Modify | Enhance Step 2.6 with AI description capture |
 | `.claude/commands/ant/pause-colony.md` | Modify | Enhance Step 4.6 with AI description capture |
 
@@ -473,6 +473,6 @@ bash runtime/aether-utils.sh generate-commit-message contextual 8 "test" "this i
 
 - `.planning/git-staging-tier2.md` - Original Tier 2 design document
 - `.planning/git-staging-research-1.6.md` - Commit message conventions research
-- `runtime/aether-utils.sh` line 1334 - Existing generate-commit-message function
+- `.aether/aether-utils.sh` line 1334 - Existing generate-commit-message function (source of truth)
 - `.claude/commands/ant/continue.md` line 737 - Existing Step 2.6
 - `.claude/commands/ant/pause-colony.md` line 99 - Existing Step 4.6
